# CamPlay

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  meson.build
configs/: README.txt
configs/Minecraft/: actions.txt  pose_action
src/: colorify.hpp  main.cpp  predictor.hpp  predictor0.hpp
